--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,44 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Webpack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HackathonYandex</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="page">
+      <header class="header">
+
+      </header>
+
+      <main>
+        <section class="section1">
+
+        </section>
+        <section class="section2">
+
+        </section>
+        <section class="section3">
+
+        </section>
+        <section class="section4">
+
+        </section>
+        <section class="section5">
+
+        </section>
+        <section class="section6">
+
+        </section>
+        <section class="section7">
+
+        </section>
+
+      </main>
+
+      <footer class="footer">
+
+      </footer>
+
+    </div>
   </body>
 </html>
