feature: header, need add some css

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,14 @@
   <body>
     <div class="page">
       <header class="header">
-
+        <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума" ></a>
+        <ul class="header__questions">
+          <li class="header__question-text">Что получу я</li>
+          <li class="header__question-text">Что получит ЯП</li>
+          <li class="header__question-text">Что делает наставник</li>
+          <li class="header__question-text">Что делает ревьюер</li>
+        </ul>
+        <button class="header__button">Кого мы ищем</button>
       </header>
 
       <main>
