featuer: starting of making section

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,72 @@
         <section class="section2">
 
         </section>
-        <section class="section3">
+        <section class="teaching">
+          <h2 class="teaching__title">Чему мы учим?</h2>
+          <div class="teaching__box">
+            <a class="teaching__link teaching__link_a" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <div class="teaching__course-box">С++</div>
+              <div class="teaching__course">
+                <h5 class="teaching__course-title">Программирование</h5>
+                <p class="teaching__course-subtitle">Тестирование, фронтенд, бэкенд, DevOps и алгоритмы</p>
+                <p class="teaching__course-amount">31 курс</p>
+              </div>
+            </a>
 
+            <a class="teaching__link teaching__link_b" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <div class="teaching__course-box teaching__course-box_sql">SQL</div>
+              <div class="teaching__course">
+                <h5 class="teaching__course-title">Анализ данных</h5>
+                <p class="teaching__course-subtitle">SQL, аналитика, Data Science и архитектура данных</p>
+                <p class="teaching__course-amount">16 курсов</p>
+              </div>
+            </a>
+
+            <a class="teaching__link teaching__link_c" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <div class="teaching__course-box teaching__course-box_IT">IT</div>
+              <div class="teaching__course teaching__course_IT">
+                <h5 class="teaching__course-title">Менеджмент</h5>
+                <p class="teaching__course-subtitle">Управление проектами, командами и IT-рекрутмент</p>
+                <p class="teaching__course-amount">12 курсов</p>
+              </div>
+            </a>
+
+            <a class="teaching__link teaching__link_d" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <div class="teaching__course teaching__course_design">
+                <h5 class="teaching__course-title">Дизайн</h5>
+                <p class="teaching__course-subtitle">Графический, коммуникационный, для интерфейсов и продуктов</p>
+                <p class="teaching__course-amount">11 курсов</p>
+              </div>
+              <div class="teaching__course-box teaching__course-box_design">Figma</div>
+            </a>
+
+            <a class="teaching__link teaching__link_e" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <div class="teaching__course">
+                <h5 class="teaching__course-title">Маркетинг</h5>
+                <p class="teaching__course-subtitle">Интернет-маркетинг и управление трафиком</p>
+                <p class="teaching__course-amount">2 курса</p>
+              </div>
+              <div class="teaching__course-box teaching__course-box_design">Figma</div>
+            </a>
+
+            <div class="teaching__links teaching__link_c">
+              <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+                <div class="teaching__course">
+                  <h5 class="teaching__course-title">Английский</h5>
+                  <p class="teaching__course-subtitle teaching__course-subtitle_s">Для работы и жизни</p>
+                  <p class="teaching__course-amount">4 курса</p>
+                </div>
+              </a>
+              <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+                <div class="teaching__course">
+                  <h5 class="teaching__course-title">Все курсы</h5>
+                  <p class="teaching__course-subtitle teaching__course-subtitle_s"></p>
+                  <p class="teaching__course-amount">76 курсов</p>
+                </div>
+              </a>
+            </div>
+
+          </div>
         </section>
         <section class="section4">
 
