fix: page width & layout

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div class="page">
-      <header class="header">
+      <div class="layout">
+      <header class="header main-width-block">
         <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума" ></a>
         <ul class="header__questions">
           <li class="header__question-text">Что получу я</li>
@@ -46,7 +47,7 @@
       <footer class="footer">
 
       </footer>
-
+      </div>
     </div>
   </body>
 </html>
