fixes: little changing

--- a/src/index.html
+++ b/src/index.html
@@ -8,45 +8,53 @@
   <body>
     <div class="page">
       <div class="layout">
-      <header class="header main-width-block">
-        <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума" ></a>
-        <ul class="header__questions">
-          <li class="header__question-text">Что получу я</li>
-          <li class="header__question-text">Что получит ЯП</li>
-          <li class="header__question-text">Что делает наставник</li>
-          <li class="header__question-text">Что делает ревьюер</li>
-        </ul>
-        <button class="header__button">Кого мы ищем</button>
-      </header>
+        <header class="header">
+          <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума" ></a>
+          <ul class="header__questions">
+            <li class="header__question-text">
+              <a class="header__question" href="#">Преимущества сотрудничества</a>
+            </li>
+            <li class="header__question-text">
+              <a class="header__question" href="#">Направления обучения</a>
+            </li>
+            <li class="header__question-text">
+              <a class="header__question" href="#">Отзывы</a>
+            </li>
+            <li class="header__question-text">
+              <a class="header__question" href="#">Частые вопросы</a>
+            </li>
+          </ul>
+          <button class="header__button">Кого мы ищем</button>
+        </header>
 
-      <main>
-        <section class="section1">
+        <main>
+          <section class="section1">
 
-        </section>
-        <section class="section2">
+          </section>
+          <section class="section2">
 
-        </section>
-        <section class="section3">
+          </section>
+          <section class="section3">
 
-        </section>
-        <section class="section4">
+          </section>
+          <section class="section4">
 
-        </section>
-        <section class="section5">
+          </section>
+          <section class="section5">
 
-        </section>
-        <section class="section6">
+          </section>
+          <section class="section6">
 
-        </section>
-        <section class="section7">
+          </section>
+          <section class="section7">
 
-        </section>
+          </section>
 
-      </main>
+        </main>
 
-      <footer class="footer">
+        <footer class="footer">
 
-      </footer>
+        </footer>
       </div>
     </div>
   </body>
