feat: questions section

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <button class="header__button">Кого мы ищем</button>
       </header>
 
-      <main>
+      <main class="content">
         <section class="section1">
 
         </section>
@@ -38,8 +38,60 @@
         <section class="section6">
 
         </section>
-        <section class="section7">
-
+        <section class="questions main-width-block">
+          <h2 class="section-title">Нас часто спрашивают...</h2>
+          <ul class="questions__accordeon">
+            <li class="questions__accordeon-item">
+              <input class="questions__accordeon-checkbox" type="checkbox" id="rd1">
+              <label for="rd1" class="questions__accordeon-question">
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+              </label>
+              <p class="questions__accordeon-content">
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+              </p>
+            </li>
+            <li class="questions__accordeon-item">
+              <input class="questions__accordeon-checkbox" type="checkbox" id="rd2">
+              <label for="rd2" class="questions__accordeon-question">
+                Какой график и формат работы?
+              </label>
+              <p class="questions__accordeon-content">
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+              </p>
+            </li>
+            <li class="questions__accordeon-item">
+              <input class="questions__accordeon-checkbox" type="checkbox" id="rd3">
+              <label for="rd3" class="questions__accordeon-question">
+                Как меня введут в работу? И помогут ли, если появятся вопросы?
+              </label>
+              <p class="questions__accordeon-content">
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+              </p>
+            </li>
+            <li class="questions__accordeon-item">
+              <input class="questions__accordeon-checkbox" type="checkbox" id="rd4">
+              <label for="rd4" class="questions__accordeon-question">
+                Смогу ли я работать на нескольких направлениях, если обладаю экчпертизой в каждом из них?
+              </label>
+              <p class="questions__accordeon-content">
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+              </p>
+            </li>
+            <li class="questions__accordeon-item">
+              <input class="questions__accordeon-checkbox" type="checkbox" id="rd5">
+              <label for="rd5" class="questions__accordeon-question">
+                Я не гражданин России, смогу ли я сотрудничать?
+              </label>
+              <p class="questions__accordeon-content">
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+                У меня совсем нет преподовательского опыта. Я могу вести у вас курсы?
+              </p>
+            </li>
+          </ul>
         </section>
 
       </main>
