добавил блок quizz и переменную с паддингом 40px

--- a/src/index.html
+++ b/src/index.html
@@ -53,14 +53,15 @@
               <img
                 class="section1__img"
                 src="<%=require('./images/title-photo.jpg')%>"
+                alt="девушка в голубой рубашке"
               />
             </div>
-            <div class="section1__quizz">
+            <div class="quizz">
               <div class="quizz__info">
                 <h3 class="quizz__title">Кто ты?</h3>
                 <p class="quizz__text">Ответь на вопросы, а мы подскажем какая роль тебе подходит</p>
               </div>
-              <button>Выбери своего игрока!</button>
+              <button class="quizz__btn btn">Выбери своего игрока!</button>
             </div>
           </section>
 
