feat: vacancy banner

--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,66 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HackathonYandex</title>
-  </head>
-  <body>
-    <div class="page">
-      <div class="layout">
-        <header class="header">
-          <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума" ></a>
-          <ul class="header__questions">
-            <li class="header__question-text">
-              <a class="header__question" href="#">Преимущества сотрудничества</a>
-            </li>
-            <li class="header__question-text">
-              <a class="header__question" href="#">Направления обучения</a>
-            </li>
-            <li class="header__question-text">
-              <a class="header__question" href="#">Отзывы</a>
-            </li>
-            <li class="header__question-text">
-              <a class="header__question" href="#">Частые вопросы</a>
-            </li>
-          </ul>
-          <button class="header__button">Кого мы ищем</button>
-        </header>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HackathonYandex</title>
+</head>
+
+<body>
+  <div class="page">
+    <div class="layout">
+      <header class="header">
+        <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума"></a>
+        <ul class="header__questions">
+          <li class="header__question-text">
+            <a class="header__question" href="#">Преимущества сотрудничества</a>
+          </li>
+          <li class="header__question-text">
+            <a class="header__question" href="#">Направления обучения</a>
+          </li>
+          <li class="header__question-text">
+            <a class="header__question" href="#">Отзывы</a>
+          </li>
+          <li class="header__question-text">
+            <a class="header__question" href="#">Частые вопросы</a>
+          </li>
+        </ul>
+        <button class="header__button">Кого мы ищем</button>
+      </header>
 
 
       <main class="content">
         <section class="section1">
 
-          </section>
-          <section class="section2">
+        </section>
+        <section class="section2">
 
-          </section>
-          <section class="section3">
+        </section>
+        <section class="section3">
 
-          </section>
-          <section class="section4">
+        </section>
+        <section class="section4">
 
-          </section>
-          <section class="section5">
+        </section>
+        <section class="section5">
 
-          </section>
-          <section class="section6">
+        </section>
+        <section class="vacancy main-width-block">
+          <h2 class="section-title">Кого мы ищем...</h2>
+          <div class="vacancy__filter">
+
+          </div>
+          <ul class="vacancy__results">
+
+          </ul>
+          <div class="vacancy__banner ">
+            <div class="vacancy__banner-heading">
+              <h3 class="vacancy__banner-title">Не нашёл подходящее предложение?</h3>
+              <p class="vacancy__banner-subtitle">Оставь контакты и мы подберём тебе роль в нашей коменде</p>
+            </div>
+            <button class="vacancy__banner-button" type="button">Оставить отклик</button>
+          </div>
         </section>
         <section class="questions main-width-block">
           <h2 class="section-title">Нас часто спрашивают...</h2>
@@ -102,12 +118,13 @@
           </ul>
         </section>
 
-        </main>
+      </main>
 
-        <footer class="footer">
+      <footer class="footer">
 
-        </footer>
-      </div>
+      </footer>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
