feat: vacancy section

--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,125 @@
 
         </section>
         <section class="vacancy main-width-block">
-          <h2 class="section-title">Кого мы ищем...</h2>
-          <div class="vacancy__filter">
-
-          </div>
+          <h2 class="section-title vacancy__title">Кого мы ищем</h2>
+          <form class="vacancy__filter">
+            <select class="vacancy__filter-job">
+              <option selected>Для наставников</option>
+              <option>Для ревьюеров</option>
+            </select>
+            <fieldset class="vacancy__filter-items">
+              <input name="vacancy-type" value="programming" id="vacancy1" class="vacancy__filter-radio" type="radio">
+              <label for="vacancy1" class="vacancy__filter-item">Аналитика</label>
+              <input checked name="vacancy-type" value="analys" id="vacancy2" class="vacancy__filter-radio" type="radio">
+              <label for="vacancy2" class="vacancy__filter-item">Программирование</label>
+              <input name="vacancy-type" value="design" id="vacancy3" class="vacancy__filter-radio" type="radio">
+              <label for="vacancy3" class="vacancy__filter-item">Дизайн</label>
+              <input name="vacancy-type" value="marketing" id="vacancy4" class="vacancy__filter-radio" type="radio">
+              <label for="vacancy4" class="vacancy__filter-item">Маркетинг</label>
+              <input name="vacancy-type" value="management" id="vacancy5" class="vacancy__filter-radio" type="radio">
+              <label for="vacancy5" class="vacancy__filter-item">Менеджмент</label>
+            </fieldset>
+          </form>
           <ul class="vacancy__results">
-
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
+            <li class="vacancy__results-item">
+              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
+              <div class="vacancy__results-item-description">
+                <p class="vacancy__results-item-paragraph">
+                  [Оплата за ведение группы]
+                </p>
+                <p class="vacancy__results-item-paragraph">
+                  [В среднем 35000 &#8381; в месяц]
+                </p>
+              </div>
+            </li>
           </ul>
           <div class="vacancy__banner ">
             <div class="vacancy__banner-heading">
